# esp-box

./: README.md  README_cn.md
.github/workflows/: build-examples-gh-pages-on-push.yml  build_IDF5.1.yml
components/bsp/: CMakeLists.txt  idf_component.yml
components/bsp/src/boards/: esp32_s3_box.c  esp32_s3_box_lite.c
examples/GREE_demo/: CMakeLists.txt  partitions.csv
examples/GREE_demo/components/espressif__esp-box-lite/: .component_hash  idf_component.yml
examples/GREE_demo/components/espressif__esp_lvgl_port/: esp_lvgl_port.c
examples/GREE_demo/main/: CMakeLists.txt  app_weather.c  app_weather.h  app_wifi.c  app_wifi.h  https_request.c  https_request.h  image_display.c  settings.c  settings.h
examples/GREE_demo/main/ui/: ui_air_main.c  ui_air_mode.c  ui_air_network.c  ui_air_speed.c  ui_air_temp.c  ui_boot_animate.c  ui_clockScreen.c  ui_light_2color.c  ui_menu_new.c  ui_washing.c
examples/GREE_demo/main/ui/fonts/: Helvetica25.c  Helvetica65.c  Helvetica_Neue14.c  SourceHanSansCN_Normal_12.c  font_SourceHanSansCN_20.c
examples/GREE_demo/main/ui/image_resource/: main_air_icon.c  main_air_weather.c  main_mode_select.c  main_mode_unselect.c  main_power_select.c  main_power_unselect.c  main_speed_select.c  main_speed_unselect.c  main_temp_select.c  main_temp_unselect.c  main_wifi_fail.c  main_wifi_ok.c  mode_btn_cool_select.c  mode_btn_cool_unselect.c  mode_btn_warm_select.c  mode_btn_warm_unselect.c  mode_cool_bg.c  mode_icon_cool.c  mode_icon_warm.c  mode_warm_bg.c  speed_air_fan.c  speed_fan_bg.c  (+14 more)
tools/launchpad/: generate_launchpad_config.sh
(+4 files in other folders)
